--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <input type="checkbox" id="emails" name="terms-checkbox" value="Car" required class="checkbox">
                             <label for="email" class="terms term">Send a copy to my email</label>
                         </div>
-                        <input type="submit" class="btn-signup" value="Sign up">
+                        <input type="submit" class="btn-signup" value="Send Email">
                     </form>
                 </div>
             </div>
@@ -87,7 +87,7 @@
             
                     <form action="">
                         <input type="text" class="username" name="name" placeholder="Username" required>
-                        <input type="text" class="password" name="name" placeholder="Password" required>
+                        <input type="password" class="password" name="name" placeholder="Password" required>
                     </form>
                     <input type="checkbox" name="" value="Car" class="checkbox" id="emails">
                     <label for="sign-in" class="terms term">Remember me</label>
